--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 adt-*.tar
 
+# Ignore database files
+*.sqlite*
+
+# Ignore locked files
+*.lock
